{
  "version": 4,
  "terraform_version": "1.14.2",
  "serial": 59,
  "lineage": "41e41383-6d2c-8bc7-8a6e-dd8dc91b7ffb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "capstone_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030106ba4dfb9335e",
            "arn": "arn:aws:ec2:ap-south-1:463655182088:elastic-ip/eipalloc-030106ba4dfb9335e",
            "association_id": "eipassoc-0198fbe3710f6147d",
            "domain": "vpc",
            "id": "eipalloc-030106ba4dfb9335e",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0f44011c3197973f5",
            "private_dns": "ip-10-0-0-215.ap-south-1.compute.internal",
            "private_ip": "10.0.0.215",
            "public_dns": "ec2-13-204-27-29.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.204.27.29",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "capstone-nat-eip"
            },
            "tags_all": {
              "Name": "capstone-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "capstone_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463655182088:internet-gateway/igw-058400d59976f15be",
            "id": "igw-058400d59976f15be",
            "owner_id": "463655182088",
            "tags": {
              "Name": "capstone-igw"
            },
            "tags_all": {
              "Name": "capstone-igw"
            },
            "vpc_id": "vpc-0184d6b2d7caa83cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "capstone_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030106ba4dfb9335e",
            "association_id": "eipassoc-0198fbe3710f6147d",
            "connectivity_type": "public",
            "id": "nat-00a723ddc8e883b27",
            "network_interface_id": "eni-0f44011c3197973f5",
            "private_ip": "10.0.0.215",
            "public_ip": "13.204.27.29",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0933724d7cf91c979",
            "tags": {
              "Name": "capstone-nat-gateway"
            },
            "tags_all": {
              "Name": "capstone-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.capstone_nat_eip",
            "aws_subnet.capstone_public_subnet",
            "aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "capstone_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463655182088:route-table/rtb-08118c410e8ef7908",
            "id": "rtb-08118c410e8ef7908",
            "owner_id": "463655182088",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00a723ddc8e883b27",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "capstone-private-rt"
            },
            "tags_all": {
              "Name": "capstone-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0184d6b2d7caa83cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.capstone_nat_eip",
            "aws_nat_gateway.capstone_nat",
            "aws_subnet.capstone_public_subnet",
            "aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "capstone_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463655182088:route-table/rtb-0cb385296aa1da535",
            "id": "rtb-0cb385296aa1da535",
            "owner_id": "463655182088",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-058400d59976f15be",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "capstone-public-rt"
            },
            "tags_all": {
              "Name": "capstone-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0184d6b2d7caa83cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.capstone_igw",
            "aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053f21a893e2da9fa",
            "route_table_id": "rtb-08118c410e8ef7908",
            "subnet_id": "subnet-01e8777081281b9b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.capstone_nat_eip",
            "aws_nat_gateway.capstone_nat",
            "aws_route_table.capstone_private_rt",
            "aws_subnet.capstone_private_subnet",
            "aws_subnet.capstone_public_subnet",
            "aws_vpc.capstone_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1041e9a2bc113d5",
            "route_table_id": "rtb-08118c410e8ef7908",
            "subnet_id": "subnet-047e98aa0b5d5a8dc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.capstone_nat_eip",
            "aws_nat_gateway.capstone_nat",
            "aws_route_table.capstone_private_rt",
            "aws_subnet.capstone_private_subnet",
            "aws_subnet.capstone_public_subnet",
            "aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ac1d7a0bebf2439",
            "route_table_id": "rtb-0cb385296aa1da535",
            "subnet_id": "subnet-0933724d7cf91c979"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.capstone_igw",
            "aws_route_table.capstone_public_rt",
            "aws_subnet.capstone_public_subnet",
            "aws_vpc.capstone_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c5dbf229b0499dc",
            "route_table_id": "rtb-0cb385296aa1da535",
            "subnet_id": "subnet-00923c4ba3a3eec94"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.capstone_igw",
            "aws_route_table.capstone_public_rt",
            "aws_subnet.capstone_public_subnet",
            "aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "capstone_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463655182088:subnet/subnet-01e8777081281b9b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e8777081281b9b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463655182088",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capstone-private-subnet-1"
            },
            "tags_all": {
              "Name": "capstone-private-subnet-1"
            },
            "vpc_id": "vpc-0184d6b2d7caa83cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463655182088:subnet/subnet-047e98aa0b5d5a8dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047e98aa0b5d5a8dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463655182088",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capstone-private-subnet-2"
            },
            "tags_all": {
              "Name": "capstone-private-subnet-2"
            },
            "vpc_id": "vpc-0184d6b2d7caa83cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "capstone_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463655182088:subnet/subnet-0933724d7cf91c979",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0933724d7cf91c979",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "463655182088",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capstone-public-subnet-1"
            },
            "tags_all": {
              "Name": "capstone-public-subnet-1"
            },
            "vpc_id": "vpc-0184d6b2d7caa83cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463655182088:subnet/subnet-00923c4ba3a3eec94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00923c4ba3a3eec94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "463655182088",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capstone-public-subnet-2"
            },
            "tags_all": {
              "Name": "capstone-public-subnet-2"
            },
            "vpc_id": "vpc-0184d6b2d7caa83cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "capstone_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463655182088:vpc/vpc-0184d6b2d7caa83cb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0966ed7a5a9ea5494",
            "default_route_table_id": "rtb-0ce8c89702d4a22f8",
            "default_security_group_id": "sg-072ced9d3041b27bc",
            "dhcp_options_id": "dopt-051402b247c8e79f2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0184d6b2d7caa83cb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ce8c89702d4a22f8",
            "owner_id": "463655182088",
            "tags": {
              "Name": "capstone-vpc"
            },
            "tags_all": {
              "Name": "capstone-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.capstone_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463655182088:security-group/sg-0409bee76c6115ca4",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0409bee76c6115ca4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0daa32a8f3b03ce46"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "capstone-eks-cluster-cluster-20251219102912792900000001",
            "name_prefix": "capstone-eks-cluster-cluster-",
            "owner_id": "463655182088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "capstone-eks-cluster-cluster",
              "Project": "capstone"
            },
            "tags_all": {
              "Name": "capstone-eks-cluster-cluster",
              "Project": "capstone"
            },
            "timeouts": null,
            "vpc_id": "vpc-0184d6b2d7caa83cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.capstone_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463655182088:security-group/sg-0daa32a8f3b03ce46",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0daa32a8f3b03ce46",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0409bee76c6115ca4"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0409bee76c6115ca4"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0409bee76c6115ca4"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0409bee76c6115ca4"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0409bee76c6115ca4"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0409bee76c6115ca4"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "capstone-eks-cluster-node-20251219102912792900000002",
            "name_prefix": "capstone-eks-cluster-node-",
            "owner_id": "463655182088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "capstone-eks-cluster-node",
              "Project": "capstone",
              "kubernetes.io/cluster/capstone-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "capstone-eks-cluster-node",
              "Project": "capstone",
              "kubernetes.io/cluster/capstone-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0184d6b2d7caa83cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.capstone_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3042255706",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0409bee76c6115ca4",
            "security_group_rule_id": "sgr-051969ce66517e50d",
            "self": false,
            "source_security_group_id": "sg-0daa32a8f3b03ce46",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc",
            "module.capstone_eks.aws_security_group.cluster",
            "module.capstone_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.capstone_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-677199061",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0daa32a8f3b03ce46",
            "security_group_rule_id": "sgr-0f593e937dda98032",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc",
            "module.capstone_eks.aws_security_group.cluster",
            "module.capstone_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1834044748",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0daa32a8f3b03ce46",
            "security_group_rule_id": "sgr-0fba5b11390a8892a",
            "self": false,
            "source_security_group_id": "sg-0409bee76c6115ca4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc",
            "module.capstone_eks.aws_security_group.cluster",
            "module.capstone_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-994029969",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0daa32a8f3b03ce46",
            "security_group_rule_id": "sgr-05e5dc61ae525f46a",
            "self": false,
            "source_security_group_id": "sg-0409bee76c6115ca4",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc",
            "module.capstone_eks.aws_security_group.cluster",
            "module.capstone_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-4068333063",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0daa32a8f3b03ce46",
            "security_group_rule_id": "sgr-0ac0def0abaa1d2b1",
            "self": false,
            "source_security_group_id": "sg-0409bee76c6115ca4",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc",
            "module.capstone_eks.aws_security_group.cluster",
            "module.capstone_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3777096230",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0daa32a8f3b03ce46",
            "security_group_rule_id": "sgr-06d729c52ade3c4a2",
            "self": false,
            "source_security_group_id": "sg-0409bee76c6115ca4",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc",
            "module.capstone_eks.aws_security_group.cluster",
            "module.capstone_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2239814125",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0daa32a8f3b03ce46",
            "security_group_rule_id": "sgr-0ad278904e85d27c7",
            "self": false,
            "source_security_group_id": "sg-0409bee76c6115ca4",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc",
            "module.capstone_eks.aws_security_group.cluster",
            "module.capstone_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-12858644",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0daa32a8f3b03ce46",
            "security_group_rule_id": "sgr-0088efcc5b8415941",
            "self": false,
            "source_security_group_id": "sg-0409bee76c6115ca4",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc",
            "module.capstone_eks.aws_security_group.cluster",
            "module.capstone_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-763878635",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0daa32a8f3b03ce46",
            "security_group_rule_id": "sgr-0fe0c3e8b9f14a095",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc",
            "module.capstone_eks.aws_security_group.cluster",
            "module.capstone_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4214335236",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0daa32a8f3b03ce46",
            "security_group_rule_id": "sgr-0228673add54a4b6a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc",
            "module.capstone_eks.aws_security_group.cluster",
            "module.capstone_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1601045739",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0daa32a8f3b03ce46",
            "security_group_rule_id": "sgr-046d5b3d6a2cf828c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc",
            "module.capstone_eks.aws_security_group.cluster",
            "module.capstone_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}